upload/dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-dep
spec:
  selector:
    matchLabels:
      app: upload-dep
  template:
    metadata:
      labels:
        app: upload-dep
    spec:
      containers:
      - name: upload-dep
        image: thatcoldtoast/bird-api-image-upload
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 443
