upload/srv.yml
apiVersion: v1
kind: Service
metadata:
  name: upload-svc
spec:
  selector:
    app: upload-dep
  ports:
  - port: 443
    targetPort: 443
